test/files/pos/t11774.scala
class C[T](x: AnyRef, y: Boolean = false) {
  def this(x: T) = this(x.asInstanceOf[AnyRef])
}
