test/files/neg/bug117.scala
class C[A](x: A) {
  def this[A](x: A, y: A) = {
    this(x);
  }
}
